--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,31 +5,7 @@
     </mat-toolbar>
   <!-- #enddocregion toolbar-simple -->
     
-  <div style="padding: 50px 50px 50px 50px;">
-
-    <mat-form-field appearance="fill" style="padding-right: 5px;">
-      <mat-label>N Parameter</mat-label>
-      <input matInput>
-    </mat-form-field>
-    <mat-form-field appearance="fill" style="padding-right: 5px;">
-      <mat-label>S Parameter</mat-label>
-      <input matInput>
-    </mat-form-field>
-    <mat-form-field appearance="fill" style="padding-right: 5px;">
-      <mat-label>K Parameter</mat-label>
-      <input matInput>
-    </mat-form-field>
-
-    <button mat-raised-button color="primary">Start</button>
+  <app-master>
+  </app-master>
 
 
-  </div>
-
-  <div style="padding: 50px 50px 50px 50px;">
-    <mat-grid-list cols="4" rowHeight="1:1" >
-      <mat-grid-tile>1</mat-grid-tile>
-      <mat-grid-tile>2</mat-grid-tile>
-      <mat-grid-tile>3</mat-grid-tile>
-      <mat-grid-tile>4</mat-grid-tile>
-    </mat-grid-list>
-  </div>
